generic repository
implementing to find (all and by params), create, create with relationship and utils but yet ajusting
