# handler/person.go
@@ -17,7 +17,7 @@ import (
 // @Failure 400 "Bad Request"
 // @Router /person [get]
 func GetPerson(c *fiber.Ctx) error {
-	var person []model.Person
+	var person model.Person
 	p, err := repository.FindR(person, nil)
 	if err != "" {
 		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"status": err})
@@ -40,7 +40,8 @@ func GetPersonId(c *fiber.Ctx) error {
 	name, _ := url.QueryUnescape(n)
 	born, _ := strconv.ParseInt(c.Params("born"), 10, 64)
 
-	var person []model.Person
+	var person model.Person
+	// , map[string]interface{}{"name": name, "born": born}
 	p, err := repository.FindR(person, map[string]interface{}{"name": name, "born": born})
 	if err != "" {
 		return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": err})
@@ -52,13 +53,41 @@ func GetPersonId(c *fiber.Ctx) error {
 // @Tags person
 // @Summary Create a person
 // @Produce  json
-// @Param id path int true "Person ID"
 // @Param person body model.Person true "Person model"
 // @Success 200 "OK"
 // @Failure 400 "Bad Request"
 // @Router /person/ [post]
 func PostPerson(c *fiber.Ctx) error {
-	return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"status": "success"})
+	var person model.Person
+	if err := c.BodyParser(&person); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "error", "message": "Review your input", "data": err})
+	}
+	p, err := repository.CreateR(person)
+	if err != "" {
+		return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": err, "person": p})
+	}
+	return c.Status(fiber.StatusOK).JSON(p)
+}
+
+// PostPersonWithRel godoc
+// @Tags person
+// @Summary Create a person with relationship
+// @Produce  json
+// @Param relationship body model.PersonRelationship true "Relationship model"
+// @Success 200 "OK"
+// @Failure 400 "Bad Request"
+// @Router /person_with_relationship [post]
+func PostPersonWithRelationship(c *fiber.Ctx) error {
+
+	var person model.PersonRelationship
+	if err := c.BodyParser(&person); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "error", "message": "Review your input", "data": err})
+	}
+	p, err := repository.CreateWithRElR(person.Person, person.Relationship, person.Movie)
+	if err != "" {
+		return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": err, "movie": p})
+	}
+	return c.Status(fiber.StatusOK).JSON(p)
 }
 
 // PutPerson godoc
