# model/person.go
@@ -1,10 +1,25 @@
 package model
 
 type Person struct {
-	TitleMovie   string `json:"titleMovie"`
-	ReleaseMovie int    `json:"releaseMovie"`
-	Name         string `json:"name"`
-	Born         int    `json:"born"`
-	Acted        bool   `json:"acted"`
-	Direct       bool   `json:"direct"`
+	Name string `json:"name"`
+	Born int    `json:"born"`
+}
+
+type Relationship struct {
+	RelationType string `json:"relationship_type"`
+	// From         string `json:"from"`
+	// To           string `json:"to"
+	Ano string `json:"ano"`
+	Mes string `json:"mes"`
+}
+
+// type RelationshipProperties struct {
+// 	Ano string `json:"ano"`
+// 	Mes string `json:"mes"`
+// }
+
+type PersonRelationship struct {
+	Movie
+	Person
+	Relationship
 }
